[package]
name = "cr-prep"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for collecting code files for code review"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/cr-prep"
keywords = ["cli", "code-review", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
